# VEX-Robotics-Pushback-2025-2026-3D-Simulation

./: .gitignore  ARCHITECTURE.md  README.md
simulator/: .gitignore  CMakeLists.txt
simulator/assets/: blue_block.glb  example_robot.glb  field.glb  red_block.glb
simulator/assets/Blue_Block/: Blue_Block.mtl
simulator/assets/Example_Robot/: Assembly 1.mtl
simulator/assets/Field/: Assembly 1.mtl
simulator/assets/Red_Block/: Red Block (1).mtl
simulator/src/: AssetLoader.cpp  AssetLoader.h  GameBlock.h  PhysicsWorld.cpp  PhysicsWorld.h  Robot.cpp  Robot.h  SimulationFilter.h  main.cpp
simulator/src/renderer/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Pipeline.cpp  Pipeline.h  VulkanContext.cpp  VulkanContext.h
simulator/src/shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv
